# tinyrt

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
models/cornellbox/: cornellbox.mtl
shaders/: fs.frag  vs.vert
src/: camera.cc  camera.h  common.h  gui.cc  gui.h  main.cc  main.cpp  material.cc  material.h  model.cc  model.h  ray.cc  ray.h  render_context.cc  render_context.h  shader_program.cc  shader_program.h  window_manager.cc  window_manager.h
